Fixed align bug in class system

--- a/grid-classes.scss
+++ b/grid-classes.scss
@@ -102,7 +102,7 @@ $fullPrefix: if($grid-prefix != '', $grid-prefix+'-', '');
 			flex-grow: 1;
 		} @else {
 			//If no columns set, grid cells will stretch
-			#{$grid}:not([class*="--cols"]):not([class*="--noStretch"]) > &:not([class*="--noStretch"]) {
+			#{$grid}:not([class*="grid--cols"]):not(.grid--noStretch):not([class*="grid--align-"]) > &:not(.grid__cell--noStretch) {
 				flex-grow: 1;
 			}
 		}
